--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "keto-mfp",
+  "name": "mfp-keto",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "mfp": "^0.5.6",
-    "moment": "^2.18.1",
-    "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "mfp": "0.7.0",
+    "moment": "2.29.1",
+    "morgan": "~1.9.1",
+    "pg": "^7.17.0",
+    "pug": "2.0.0-beta11",
+    "qovery-client": "^0.1.1"
   }
 }
